--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -30,13 +30,13 @@
 
 @mixin call-to-action-button($color, $bgColor) {
   display: block;
-  background: rgb(247, 243, 0);
+  background: #fffb3d;
   background-position: top 23px center;
   background-repeat: no-repeat;
-  box-shadow: 4px 4px 0px 0px rgb(224, 32, 158);
+  box-shadow: 4px 4px 0px 0px #d01b91;
   max-width: 80vw;
   padding: 1.2rem 2.2rem;
-  color: rgb(224, 32, 158);
+  color: #d01b91;
   font-family: Prototype, sans-serif;
 
   text-align: center;
@@ -106,7 +106,7 @@
   display: inline-block;
   background: rgb(255, 255, 255);
   border: 1.5px solid rgb(255, 255, 255);
-  box-shadow: 1px 1px 0px 0px rgb(224, 32, 158);
+  box-shadow: 1px 1px 0px 0px #d01b91;
   text-align: left;
   list-style-type: none;
   letter-spacing: 0.8px;
